--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,14 @@ buildscript {
     repositories {
         mavenCentral()
     }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
-    }
+}
+
+plugins {
+    id 'war'
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-bootJar {
-    baseName = 'gs-securing-web'
-    version =  '0.1.0'
-}
 
 repositories {
     mavenCentral()
@@ -25,6 +19,16 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile 'org.springframework.security:spring-security-web:4.1.5.RELEASE'
-    compile 'org.springframework.security:spring-security-config:4.1.5.RELEASE'
+
+    def springVersion = '5.1.1.RELEASE'
+
+    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+
+    compile group: 'org.springframework.security', name: 'spring-security-web', version: "${springVersion}"
+    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.4.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-cas', version: "${springVersion}"
+    compile group: 'org.springframework', name: 'spring-webmvc', version: "${springVersion}"
+
+    testCompile group: 'org.springframework.security', name: 'spring-security-test', version: "${springVersion}"
+
 }
